# routes/index.js
@@ -3,6 +3,7 @@ const router = express.Router()
 const apiRouter = express.Router()
 
 const userRoutes = require('./user-routes.js')
+const organizationRoutes = require('./organization-routes.js')
 const authRoutes = require('./auth-routes.js')
 const swaggerUi = require('swagger-ui-express')
 const swaggerDocument = require('../docs/openapi.json')
@@ -11,6 +12,7 @@ const swaggerDocument = require('../docs/openapi.json')
 router.use('/api', apiRouter)
 
 apiRouter.use('/users', userRoutes)
+apiRouter.use('/organizations', organizationRoutes)
 apiRouter.use('/auth', authRoutes)
 apiRouter.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
